[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemy/bandit/Bandit.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 3.62, 2.98, 4.56 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 28, 48, 30 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 120, 120, 64 )

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Mesh" parent="." instance=ExtResource( 2 )]
transform = Transform( 2.4, 0, 0, 0, 2.4, 0, 0, 0, 2.4, 0, -5.97123, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1.3, 0, 1, -5.68248e-008, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="KnockTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="GunCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 1.33409, 0 )
cast_to = Vector3( 0, 100, 0 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, -0.913592, 3.0082, 46.0534 )
shape = SubResource( 2 )

[node name="Hindsight" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Hindsight"]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 0, 0 )
shape = SubResource( 3 )
disabled = true

[node name="ExitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FloorCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.75864, 0 )
enabled = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="KnockTimer" to="." method="_on_KnockTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Hindsight" to="." method="_on_Hindsight_body_entered"]
[connection signal="body_exited" from="Hindsight" to="." method="_on_Hindsight_body_exited"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_ExitTimer_timeout"]
